fix - horizontal card title overflow, note modal font family

--- a/src/components/InputField/input-field.scss
+++ b/src/components/InputField/input-field.scss
@@ -6,13 +6,13 @@
   display: block;
   position: relative;
 
-
   &__label {
     display: block;
     font-size: 1.5rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
     color: $default;
+    font-family: inherit;
   }
 
   &__input {
@@ -26,7 +26,6 @@
     border: 1px solid black;
     transition: 0.4s all ease;
     border-bottom: 3px solid transparent;
-
 
     &:focus {
       outline: 0;
