--- a/src/components/NotesModal/notes-modal.scss
+++ b/src/components/NotesModal/notes-modal.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-family: inherit;
   }
 
   &__textarea {
@@ -14,6 +15,7 @@
     outline: 0;
     transition: 0.4s all;
     color: var(--text-color);
+    font-family: inherit;
 
     &:focus {
       border: 2px solid var(--default);
